--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -51,3 +51,22 @@
 		}
 	}
 }
+
+.order__label {
+	margin-top: 0.5rem;
+	.buttons-container {
+		display: inline-flex;
+		gap: 1rem;
+
+		button {
+			border: none;
+			outline: none;
+			background: orange;
+			color: white;
+			padding: 0.5em 1em;
+			border-radius: 0.5em;
+			cursor: pointer;
+			font-size: 1rem;
+		}
+	}
+}
