done #10  = pagination + search

--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -2,7 +2,8 @@
 
 .categories {
 	@media (max-width: 700px) {
-		overflow: scroll;
+		overflow-x: scroll;
+
 		ul {
 			display: block;
 			width: 900px;
