--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -6,8 +6,11 @@
 
 	.container {
 		display: flex;
-		align-items: center;
-		justify-content: space-between;
+		// align-items: center;
+		// justify-content: space-between;
+
+		flex-direction: column;
+		gap: 3rem;
 	}
 
 	&__logo {
