done #17 = fetching pizzas in redux \w async thunk

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,6 +24,10 @@ body {
 		margin: 35px 0;
 	}
 
+	&__error-info {
+		padding: 1rem;
+		text-align: center;
+	}
 	&__items {
 		display: grid;
 		row-gap: 1rem;
